Handle new spawn tag in level.dat
I couldn't find this in the changelog, but it was changed in 1.21.9
#232
Also support for 26.1 dimensions folder